# jenkinsTestRepo

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  Main.cpp
src/core/: CMakeLists.txt  dumcore.cpp  dumcore.h
